# Projects

./: LICENSE  README.md  buildozer.spec  calculator.py  calculator_app.py  commands.py  constants.py  engine.py  main.py  math_engine.py  parser.py
.github/workflows/: JavaCalculator.yml  android.yml  build.yml  build.yml.disabled  python.yml
C++/DuplicateFinder/: CMakeLists.txt
C++/DuplicateFinder/src/: DuplicateChecker.cpp  DuplicateChecker.h  MainWindow.h  Scanner.cpp  Scanner.h
C++/ScientificCalculator/: CMakeLists.txt
C++/ScientificCalculator/src/: Constants.h  Engine.cpp  Engine.h  FunctionLibrary.h  MathLibrary.cpp  MathLibrary.h  Parser.cpp  Parser.h  Tokenizer.cpp  Tokenizer.h  Types.h
C++/ScientificCalculator/src/functions/: Arithmetic.cpp  Factorial.cpp  Hyperbolic.h  Memory.cpp  Memory.h  Powers.h  Random.cpp  Random.h  Roots.cpp  Roots.h
Calculator2/: main.py
CalculatorWithC++/: main.cpp
Java/ScientificCalculator/src/: Engine.java  Main.java
PasswordGenerator/: main.py
Python/ChemistryCalculator/chemistry/: constants.py  library.py  molarity.py  stoichiometry.py
Python/ChemistryCalculator/docs/: Dilution.md  Introduction.md  Molarity.md  Stoichiometry.md
Python/ScientificCalculator/: calculator.py  commands.py  constants.py  parser.py  requirements.txt
Python/ScientificCalculator/docs/: ComplexNumbers.md  Factors.md  HyperbolicFunctions.md  IntegerMathematics.md  Logarithms.md  MathematicalConstants.md  Trigonometry.md
Python/Translator/: translator.py
functions/: factorial.py  library.py  simplify.py
(+19 files in other folders)
